fixing some spacing

--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ h2{
     position: fixed;
     width: 100%;
     top: 0;
-    background-color: #2d2d2dab;
+    background-color: #00234d;
     color: white;
     z-index: 1;
     box-shadow: inset 0 0 5px black
@@ -118,7 +118,7 @@ h2{
     border-bottom-right-radius: 10px;
 }
 p{
-    font-size: 18px;
+    font-size: 17px;
     font-family: var(--font-family);
     color: white;
     line-height: 1.8;
@@ -218,7 +218,7 @@ p{
     margin: 0 5% 5% 5%;
 }
 a{
-    font-size: 20px;
+    font-size: 17px;
     font-family: var(--font-family);
     color: white;
 }
@@ -261,6 +261,9 @@ a{
     color: white;
     gap: 25px;
 }
+.contactHeader{
+    margin-top: 20px;
+}
 .contact-input{
     display: flex;
     flex-direction: column;
@@ -279,6 +282,7 @@ input {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
+    border-radius: 8px;
 }
 textarea {
     width: 350px;
@@ -299,7 +303,7 @@ label {
 }
 .intro-pic{
     background-image: url(./pictures/introPic.jpg);
-    min-height: 450px;
+    min-height: 380px;
     width: 100%;
     position: relative;
     background-position: center;
@@ -307,11 +311,11 @@ label {
     background-repeat: no-repeat;
     background-attachment: fixed;
     box-shadow: inset 0 -5px 10px black;
-    margin-top: 100px;
+    margin-top: 25px;
 }
 .javascript-pic{
     background-image: url(./pictures/javascript-code.jpg);
-    min-height: 450px;
+    min-height: 300px;
     width: 100%;
     position: relative;
     background-position: center;
@@ -322,7 +326,7 @@ label {
 }
 .worksetting-pic{
     background-image: url(./pictures/workSetting.jpg);
-    min-height: 450px;
+    min-height: 350px;
     width: 100%;
     position: relative;
     background-position: center;
@@ -351,7 +355,7 @@ label {
     text-align: center;
     background-color: rgb(0, 35, 77);
     border-radius: 10px;
-    padding-bottom: 35px;
+    padding-bottom: 50px;
     width: 80vw;
     justify-self: center;
 }
@@ -370,7 +374,9 @@ label {
     justify-content: center;
     margin: 2% 15% 5% 15%;
 }
-
+.projectHeader{
+    margin-top: 20px;
+}
 @media only screen and (max-width: 1320px) {
  .project-container{
     flex-direction: column;
